<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.nju.cyh.voices.MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/freq_input21"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/freq_input2"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/freq_input"
        android:layout_alignBottom="@+id/freq_input"
        android:layout_alignLeft="@+id/chirp_button"
        android:layout_alignStart="@+id/chirp_button" />

    <EditText
        android:id="@+id/freq_input22"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/freq_input21"
        android:layout_alignStart="@+id/freq_input21"
        android:layout_below="@+id/freq_input21"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/freq_input3"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/freq_input"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sinwave_button"
        android:layout_alignRight="@+id/sinwave_button"
        android:layout_below="@+id/chirp_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/freq_input"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <Button
        android:id="@+id/chirp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chirp_button"
        android:layout_alignBaseline="@+id/sinwave_button"
        android:layout_alignBottom="@+id/sinwave_button"
        android:layout_toRightOf="@+id/label" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:layout_below="@+id/freq_input22"
        android:layout_alignLeft="@+id/freq_input"
        android:layout_alignStart="@+id/freq_input"
        android:layout_marginTop="54dp" />

    <TextView
        android:id="@+id/label"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="33dp"
        android:text="@string/CricketVoice" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/play_button"
        android:layout_alignBottom="@+id/play_button"
        android:layout_alignLeft="@+id/freq_input22"
        android:layout_alignStart="@+id/freq_input22"
        android:text="@string/pause_button" />

    <Button
        android:id="@+id/sinwave_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/SinWave_button"
        android:layout_below="@+id/label"
        android:layout_toLeftOf="@+id/label" />

</RelativeLayout>
